tests/type_errors/too_small_record.sy
mod A

def main : { a : Int, b : Int } -> _: { a, b: {} } =  a

def x ::= main { a: 1, b: 1 }
